--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "axios": "^0.15.3",
     "native-base": "^2.0.13",
     "react": "15.4.2",
-    "react-native": "0.42.3"
+    "react-native": "0.42.3",
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
